--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <div id="about" class="section">
         <h2>About Me</h2>
         <img src="images/profile.jpg" alt="Profile Photo" class="profile-pic">
-        <p>I'm a passionate web developer specializing in front-end and back-end technologies.</p>
+        <p>I am a <B>Bachelor of Science graduate </B>in Computer Science with a strong foundation in programming concepts and logical thinking. My education has equipped me with the skills to approach challenges systematically and find innovative solutions. I possess basic knowledge of programming languages and have a keen interest in problem-solving. I am passionate about technology and eager to continue learning and growing in the field of computer science. My logical mindset allows me to break down complex problems into manageable steps. I look forward to contributing my skills to exciting projects and collaborative teams.</p>
     </div>
 
     <!-- Education Section -->
     <div id="education" class="section hidden">
         <h2>Education</h2>
         <ul>
-            <li><b>Bachelor's in Computer Science</b> - XYZ University (2018-2022)</li>
-            <li><b>Web Development Bootcamp</b> - Udemy (2023)</li>
+            <li><b>Bachelor's in Computer Science</b> - madras University (2023-2026)</li>
+            
         </ul>
     </div>
 
@@ -57,7 +57,7 @@
     <div id="projects" class="section hidden">
         <h2>Projects</h2>
         <div class="project-card">
-            <h3>Portfolio Website</h3>
+            <h3>IBM WEBPAGE APPLICATION</h3>
             <p>A personal portfolio to showcase my skills and projects.</p>
             <a href="https://yourportfolio.com" target="_blank">Live Demo</a>
         </div>
