--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Portfolio</title>
+    <title>JOSHVA REIGNS</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -11,7 +11,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <h1>My Portfolio</h1>
+        <h1>BSC COMPUTER SCIENCE</h1>
         <ul class="nav-links">
             <li><a href="#" onclick="showSection('about')">About</a></li>
             <li><a href="#" onclick="showSection('education')">Education</a></li>
